lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: idtd-contained-frontend-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - idtd-contained-frontend.com
      secretName: idtd-contained-frontend-cert
  rules:
    - host: idtd-contained-frontend.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: itdt-contained-frontend-service
                port:
                  number: 3000
            pathType: Prefix
